--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -19,13 +19,22 @@
         android:padding="10dp"
         android:textColor="#FFFFFF"/>
 
-    <Button
-        android:id="@+id/btn_userSearch"
-        android:layout_width="wrap_content"
+    <com.jaredrummler.materialspinner.MaterialSpinner
+        android:id="@+id/search_spinner"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/et_userSearch"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentRight="true"/>
+
+    <Button
+        android:id="@+id/btn_userSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_userSearch"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:text="Search"
         android:textColor="#FFFFFF"
         android:background="@drawable/round"/>
@@ -35,8 +44,8 @@
         android:id="@+id/userBookSearch_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/et_userSearch"
-        android:layout_marginTop="20dp">
+        android:layout_below="@+id/btn_userSearch"
+        android:layout_marginTop="10dp">
 
 
     </android.support.v7.widget.RecyclerView>
