--- a/app/src/main/res/layout/activity_user_confirm_order.xml
+++ b/app/src/main/res/layout/activity_user_confirm_order.xml
@@ -6,39 +6,37 @@
     android:layout_height="match_parent"
     tools:context="com.example.androidbasebokstore.UserConfirmOrder">
 
-    <TextView
-        android:id="@+id/txt_bill"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total Bill"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:textSize="16sp"
-        android:textColor="@color/primary_dark"
-        android:textStyle="bold"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/bill_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/noOfBooks">
+
+
+    </android.support.v7.widget.RecyclerView>
 
     <TextView
         android:id="@+id/noOfBooks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total books"
-        android:layout_marginTop="30dp"
-        android:layout_below="@id/txt_bill"
         android:layout_marginLeft="20dp"
         android:textColor="@color/primary_dark"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_above="@+id/txt_noOfBooks"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:id="@+id/txt_noOfBooks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total books"
-        android:layout_marginTop="30dp"
-        android:layout_below="@id/noOfBooks"
         android:layout_marginLeft="20dp"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_above="@+id/btn_confirmOrder"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:id="@+id/price"
