--- a/app/src/main/res/menu/activity_user_home_drawer.xml
+++ b/app/src/main/res/menu/activity_user_home_drawer.xml
@@ -18,7 +18,7 @@
         <item
             android:id="@+id/nav_myOrders"
             android:title="My Orders"
-            android:icon="@mipmap/ic_search_black_24dp"/>
+            android:icon="@drawable/order"/>
         <item
             android:id="@+id/nav_exit"
             android:title="Exit"
