--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,14 @@
     tools:context="com.example.androidbasebokstore.MainActivity"
     android:background="@drawable/background">
 
-    <TextView
-        android:id="@+id/txt_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <ImageView
+        android:id="@+id/img_icon"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="Android Based Book Store"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        android:textColor="#000000"/>
+        android:src="@drawable/icon"
+        android:layout_marginTop="25dp"/>
 
 
     <EditText
@@ -24,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/txt_title"
+        android:layout_below="@+id/img_icon"
         android:layout_marginTop="50dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
